# claude-projection-status

./: .gitignore  README.md  claude-status  pyproject.toml
claude_status/: __main__.py  cli.py  config.py  projection.py  render.py  storage.py  threshold.py  transcript.py
tests/: test_projection.py  test_storage.py  test_transcript.py
tests/fixtures/projects/-fake-proj/: sess1.jsonl
tests/fixtures/projects/-fake-proj/sess1/subagents/: agent-aaa.jsonl  agent-bbb.jsonl
